<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCardActivity">

    <EditText
        android:id="@+id/edit_question"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="58dp"
        android:layout_marginTop="141dp"
        android:hint="@string/hint_question"
        android:inputType="text" />


    <EditText
        android:id="@+id/edit_answer"
        android:layout_width="249dp"
        android:layout_height="115dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="57dp"
        android:layout_marginTop="245dp"
        android:hint="@string/hint_answer"
        android:inputType="textMultiLine" />

    <ImageView
        android:id="@+id/close_sign"
        android:layout_width="49dp"
        android:layout_height="44dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="21dp"
        android:contentDescription="@string/closeDescription"
        android:src="@drawable/ic_closesign" />

    <ImageView
        android:id="@+id/save_sign"
        android:layout_width="57dp"
        android:layout_height="38dp"
        android:layout_alignBottom="@+id/close_sign"
        android:layout_marginEnd="-119dp"
        android:layout_marginBottom="1dp"
        android:layout_toStartOf="@+id/edit_question"
        android:contentDescription="@string/saveDescription"
        app:srcCompat="@drawable/ic_savesign" />


</RelativeLayout>