<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".MainActivity">

    <!--android:background="@color/softGray"-->
    <TextView
        android:id="@+id/flashcard_answer"
        android:background="@drawable/card_background2"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/answer"
        android:gravity="center"
        android:textSize="40sp"
        android:visibility="invisible"
        android:textColor="#FFFFFF"
        android:elevation="5dp"
        />


    <TextView
        android:id="@+id/flashcard_question"
        android:background="@drawable/card_background"
        android:elevation="7dp"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/question"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="#FFFFFF"


        />

    <TextView
        android:id="@+id/answer1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/flashcard_question"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="41dp"
        android:background="@drawable/card_background3"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/answer1"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/answer1"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/card_background3"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/answer2"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/answer3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/answer2"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/card_background3"
        android:elevation="5dp"
        android:gravity="center"
        android:text="@string/answer3"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/toggle_choices_visibility"
        android:contentDescription="@string/toggleDescription"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="18dp"
        android:gravity="center"
        android:elevation="5dp"
        android:src="@drawable/hide_icon_a"
        />

    <ImageView
        android:id="@+id/plus_sign"
        android:layout_width="37dp"
        android:layout_height="43dp"
        android:layout_alignTop="@+id/toggle_choices_visibility"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="-1dp"
        android:layout_marginEnd="26dp"
        app:srcCompat="@drawable/plus_sign" />

    <ImageView
        android:id="@+id/next_button"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_below="@+id/flashcard_answer"
        android:layout_alignEnd="@+id/plus_sign"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="69dp"
        app:srcCompat="@drawable/ic_nextarrow" />
    <!--android:src="@mipmap/hide_icon"-->




</RelativeLayout>